--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.60",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
+    "axios": "^1.7.7",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
@@ -19,6 +30,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -30,7 +42,9 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "json-server": "^1.0.0-beta.2",
+    "postcss": "^8.4.47",
     "prettier": "3.3.3",
+    "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
   }
 }
